welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: Unmatched closing brace '}' ignored here
	if ( 10<a<20 || 10<b<20 ) }
                                  ^in1020:4: error: ';' expected but 'else' found.
	}else{
         ^in1020:10: error: Unmatched closing brace '}' ignored here
 }
 ^